--- a/settings.gradle
+++ b/settings.gradle
@@ -7,3 +7,6 @@ project(':libsignal-service').projectDir = file('libsignal/service')
 project(':').buildFileName = 'main.gradle'
 
 rootProject.name='Signal'
+
+include ':zkgroups'
+project(':zkgroups').projectDir = file('libsignal/zkgroups-api')
