Update and refactor storage service syncing.
Switched to proto3, updated protos, and generally refactored things to
make it easier to add new storage record types.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -350,7 +350,9 @@ dependencies {
     testImplementation 'org.powermock:powermock-classloading-xstream:1.6.1'
 
     testImplementation 'androidx.test:core:1.2.0'
-    testImplementation 'org.robolectric:robolectric:4.2'
+    testImplementation ('org.robolectric:robolectric:4.2') {
+        exclude group: 'com.google.protobuf', module: 'protobuf-java'
+    }
     testImplementation 'org.robolectric:shadows-multidex:4.2'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
