--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,113 +80,6 @@ protobuf {
     }
 }
 
-dependencies {
-    implementation 'androidx.appcompat:appcompat:1.1.0-beta01'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.legacy:legacy-support-v13:1.0.0'
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.preference:preference:1.0.0'
-    implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
-    implementation 'androidx.gridlayout:gridlayout:1.0.0'
-    implementation 'androidx.exifinterface:exifinterface:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'androidx.navigation:navigation-fragment:2.1.0'
-    implementation 'androidx.navigation:navigation-ui:2.1.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:1.0.0-alpha05'
-    implementation 'androidx.lifecycle:lifecycle-common-java8:2.1.0'
-    implementation "androidx.camera:camera-core:1.0.0-alpha06"
-    implementation "androidx.camera:camera-camera2:1.0.0-alpha06"
-
-    implementation('com.google.firebase:firebase-messaging:17.3.4') {
-        exclude group: 'com.google.firebase', module: 'firebase-core'
-        exclude group: 'com.google.firebase', module: 'firebase-analytics'
-        exclude group: 'com.google.firebase', module: 'firebase-measurement-connector'
-    }
-
-    implementation 'com.google.android.gms:play-services-maps:16.1.0'
-    implementation 'com.google.android.gms:play-services-auth:16.0.1'
-
-    implementation 'com.google.android.exoplayer:exoplayer-core:2.9.1'
-    implementation 'com.google.android.exoplayer:exoplayer-ui:2.9.1'
-
-    implementation 'org.conscrypt:conscrypt-android:2.0.0'
-    implementation 'org.signal:aesgcmprovider:0.0.3'
-
-    implementation project(':libsignal-service')
-
-    implementation 'org.signal:argon2:13.1@aar'
-
-    implementation 'org.signal:ringrtc-android:1.0.2'
-
-    implementation "me.leolin:ShortcutBadger:1.1.16"
-    implementation 'se.emilsjolander:stickylistheaders:2.7.0'
-    implementation 'com.jpardogo.materialtabstrip:library:1.0.9'
-    implementation 'org.apache.httpcomponents:httpclient-android:4.3.5'
-    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
-    annotationProcessor 'androidx.annotation:annotation:1.1.0'
-    implementation 'com.makeramen:roundedimageview:2.1.0'
-    implementation 'com.pnikosis:materialish-progress:1.5'
-    implementation 'org.greenrobot:eventbus:3.0.0'
-    implementation 'pl.tajchert:waitingdots:0.1.0'
-    implementation 'com.melnykov:floatingactionbutton:1.3.0'
-    implementation 'com.google.zxing:android-integration:3.1.0'
-    implementation 'mobi.upod:time-duration-picker:1.1.3'
-    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
-    implementation 'com.google.zxing:core:3.2.1'
-    implementation ('com.davemorrissey.labs:subsampling-scale-image-view:3.6.0') {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    }
-    implementation ('cn.carbswang.android:NumberPickerView:1.0.9') {
-        exclude group: 'com.android.support', module: 'appcompat-v7'
-    }
-    implementation ('com.tomergoldst.android:tooltips:1.0.6') {
-        exclude group: 'com.android.support', module: 'appcompat-v7'
-    }
-    implementation ('com.klinkerapps:android-smsmms:4.0.1') {
-        exclude group: 'com.squareup.okhttp', module: 'okhttp'
-        exclude group: 'com.squareup.okhttp', module: 'okhttp-urlconnection'
-    }
-    implementation 'com.annimon:stream:1.1.8'
-    implementation ('com.takisoft.fix:colorpicker:0.9.1') {
-        exclude group: 'com.android.support', module: 'appcompat-v7'
-        exclude group: 'com.android.support', module: 'recyclerview-v7'
-    }
-
-    implementation 'com.airbnb.android:lottie:3.0.7'
-
-    implementation 'com.codewaves.stickyheadergrid:stickyheadergrid:0.9.4'
-    implementation 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3-S2'
-    implementation 'org.signal:android-database-sqlcipher:3.5.9-S3'
-    implementation ('com.googlecode.ez-vcard:ez-vcard:0.9.11') {
-        exclude group: 'com.fasterxml.jackson.core'
-        exclude group: 'org.freemarker'
-    }
-
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.assertj:assertj-core:3.11.1'
-    testImplementation 'org.mockito:mockito-core:1.9.5'
-    testImplementation 'org.powermock:powermock-api-mockito:1.6.1'
-    testImplementation 'org.powermock:powermock-module-junit4:1.6.1'
-    testImplementation 'org.powermock:powermock-module-junit4-rule:1.6.1'
-    testImplementation 'org.powermock:powermock-classloading-xstream:1.6.1'
-
-    testImplementation 'androidx.test:core:1.2.0'
-    testImplementation 'org.robolectric:robolectric:4.2'
-    testImplementation 'org.robolectric:shadows-multidex:4.2'
-
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-}
-
-dependencyVerification {
-    configuration = '(play|website)(Debug|Release)RuntimeClasspath'
-}
-
 def canonicalVersionCode = 610
 def canonicalVersionName = "4.56.4"
 
@@ -307,6 +200,10 @@ android {
             buildConfigField "String", "UNIDENTIFIED_SENDER_TRUST_ROOT", "\"BbqY1DzohE4NUZoVF+L18oUPrK3kILllLEJh2UnPSsEx\""
             buildConfigField "String", "ZKGROUP_SERVER_PUBLIC_PARAMS", "\"\""
         }
+        flipper {
+            initWith debug
+            minifyEnabled false
+        }
         release {
             minifyEnabled true
             proguardFiles = buildTypes.debug.proguardFiles
@@ -353,6 +250,117 @@ android {
         }
     }
 }
+
+dependencies {
+    implementation 'androidx.appcompat:appcompat:1.1.0-beta01'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v13:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.preference:preference:1.0.0'
+    implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
+    implementation 'androidx.exifinterface:exifinterface:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'androidx.navigation:navigation-fragment:2.1.0'
+    implementation 'androidx.navigation:navigation-ui:2.1.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:1.0.0-alpha05'
+    implementation 'androidx.lifecycle:lifecycle-common-java8:2.1.0'
+    implementation "androidx.camera:camera-core:1.0.0-alpha06"
+    implementation "androidx.camera:camera-camera2:1.0.0-alpha06"
+
+    implementation('com.google.firebase:firebase-messaging:17.3.4') {
+        exclude group: 'com.google.firebase', module: 'firebase-core'
+        exclude group: 'com.google.firebase', module: 'firebase-analytics'
+        exclude group: 'com.google.firebase', module: 'firebase-measurement-connector'
+    }
+
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
+
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.9.1'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.9.1'
+
+    implementation 'org.conscrypt:conscrypt-android:2.0.0'
+    implementation 'org.signal:aesgcmprovider:0.0.3'
+
+    implementation project(':libsignal-service')
+
+    implementation 'org.signal:argon2:13.1@aar'
+
+    implementation 'org.signal:ringrtc-android:1.0.2'
+
+    implementation "me.leolin:ShortcutBadger:1.1.16"
+    implementation 'se.emilsjolander:stickylistheaders:2.7.0'
+    implementation 'com.jpardogo.materialtabstrip:library:1.0.9'
+    implementation 'org.apache.httpcomponents:httpclient-android:4.3.5'
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    annotationProcessor 'androidx.annotation:annotation:1.1.0'
+    implementation 'com.makeramen:roundedimageview:2.1.0'
+    implementation 'com.pnikosis:materialish-progress:1.5'
+    implementation 'org.greenrobot:eventbus:3.0.0'
+    implementation 'pl.tajchert:waitingdots:0.1.0'
+    implementation 'com.melnykov:floatingactionbutton:1.3.0'
+    implementation 'com.google.zxing:android-integration:3.1.0'
+    implementation 'mobi.upod:time-duration-picker:1.1.3'
+    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    implementation 'com.google.zxing:core:3.2.1'
+    implementation ('com.davemorrissey.labs:subsampling-scale-image-view:3.6.0') {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
+    implementation ('cn.carbswang.android:NumberPickerView:1.0.9') {
+        exclude group: 'com.android.support', module: 'appcompat-v7'
+    }
+    implementation ('com.tomergoldst.android:tooltips:1.0.6') {
+        exclude group: 'com.android.support', module: 'appcompat-v7'
+    }
+    implementation ('com.klinkerapps:android-smsmms:4.0.1') {
+        exclude group: 'com.squareup.okhttp', module: 'okhttp'
+        exclude group: 'com.squareup.okhttp', module: 'okhttp-urlconnection'
+    }
+    implementation 'com.annimon:stream:1.1.8'
+    implementation ('com.takisoft.fix:colorpicker:0.9.1') {
+        exclude group: 'com.android.support', module: 'appcompat-v7'
+        exclude group: 'com.android.support', module: 'recyclerview-v7'
+    }
+
+    implementation 'com.airbnb.android:lottie:3.0.7'
+
+    implementation 'com.codewaves.stickyheadergrid:stickyheadergrid:0.9.4'
+    implementation 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3-S2'
+    implementation 'org.signal:android-database-sqlcipher:3.5.9-S3'
+    implementation ('com.googlecode.ez-vcard:ez-vcard:0.9.11') {
+        exclude group: 'com.fasterxml.jackson.core'
+        exclude group: 'org.freemarker'
+    }
+
+    flipperImplementation 'com.facebook.flipper:flipper:0.32.2'
+    flipperImplementation 'com.facebook.soloader:soloader:0.8.2'
+
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.assertj:assertj-core:3.11.1'
+    testImplementation 'org.mockito:mockito-core:1.9.5'
+    testImplementation 'org.powermock:powermock-api-mockito:1.6.1'
+    testImplementation 'org.powermock:powermock-module-junit4:1.6.1'
+    testImplementation 'org.powermock:powermock-module-junit4-rule:1.6.1'
+    testImplementation 'org.powermock:powermock-classloading-xstream:1.6.1'
+
+    testImplementation 'androidx.test:core:1.2.0'
+    testImplementation 'org.robolectric:robolectric:4.2'
+    testImplementation 'org.robolectric:shadows-multidex:4.2'
+
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+}
+
+dependencyVerification {
+    configuration = '(play|website)(Debug|Release)RuntimeClasspath'
+}
+
 
 def assembleWebsiteDescriptor = { variant, file ->
     if (file.exists()) {
