--- a/app/witness-verifications.gradle
+++ b/app/witness-verifications.gradle
@@ -357,6 +357,12 @@ dependencyVerification {
         ['org.signal:signal-metadata-java:0.1.0',
          'f3faa23b7d9b5096d12979c35679d1e3b5e007522d8bef167a28e456f2a7c7d9'],
 
+        ['org.signal:zkgroup-android:0.4.1',
+         '52049e207531ef50160873ad4a44682ce2bfb7706e5e4179035d9632eb9d5eac'],
+
+        ['org.signal:zkgroup-java:0.4.1',
+         '12ea7e18c58aaefdbb8eccb748deff4f7c8fbd950eeb9c426dc894de50a83b77'],
+
         ['org.threeten:threetenbp:1.3.6',
          'f4c23ffaaed717c3b99c003e0ee02d6d66377fd47d866fec7d971bd8644fc1a7'],
 
